--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
     "expo-haptics": "^15.0.8",
@@ -25,6 +26,7 @@
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-svg": "^15.15.1",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.7.1"
   },
