--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
+    "expo-apple-authentication": "^8.0.8",
     "expo-haptics": "^15.0.8",
     "expo-linear-gradient": "^15.0.8",
     "expo-secure-store": "^15.0.8",
